force-app/main/default/objects/LLC_BI__LoanRenewal__c/fields/LLC_BI__HasActiveRenewalLoan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HasActiveRenewalLoan__c</fullName>
    <description>Flag indicating whether or not this record relates to an active renewal loan. This field is automatically set by the system. It is used behind the scenes to set the appropriate appendages during the renewal and modification process.</description>
    <formula>IF( ISBLANK(  LLC_BI__DeletedLoanName__c ) &amp;&amp; LLC_BI__RevisionNumber__c &gt; 0 &amp;&amp; (LLC_BI__RevisionStatus__c != &apos;Withdrawn&apos;) &amp;&amp; (LLC_BI__RevisionStatus__c != &apos;Declined&apos;) &amp;&amp; (LLC_BI__Is_No_Action_Placeholder__c != true), True, False )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Active Renewal Loan</label>
    <type>Checkbox</type>
</CustomField>