force-app/main/default/objects/LLC_BI__LoanRenewal__c/fields/LLC_BI__Original_Parent__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Original_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this optional lookup field with the original parent loan or it is set to null if no parent exists when a loan renewal is created for an action. By default, it is null.</description>
    <label>Original Parent</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Original Parent Loan</relationshipLabel>
    <relationshipName>OriginalParentLoan</relationshipName>
    <type>Lookup</type>
</CustomField>