force-app/main/default/objects/LLC_BI__LoanRenewal__c/fields/LLC_BI__Original_Product_Package__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Original_Product_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this lookup field to track what product package the loan originated from. By default, it is null</description>
    <label>Original Product Package</label>
    <referenceTo>LLC_BI__Product_Package__c</referenceTo>
    <relationshipLabel>Original Product Package</relationshipLabel>
    <relationshipName>OriginalProductPackage</relationshipName>
    <type>Lookup</type>
</CustomField>