force-app/main/default/objects/LLC_BI__LoanRenewal__c/fields/LLC_BI__RenewalLoanId__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__RenewalLoanId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field references the ID of the loan renewal record. It is automatically populated when renewal records are created.</description>
    <label>Renewal Loan Id</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipName>RenewalJunctionObject</relationshipName>
    <type>Lookup</type>
</CustomField>